@@ -47,6 +47,8 @@ https://github.com/richardhansen/tap4sh
   * All function and variable names beginning with `t4s_` are reserved
     by this library.
   * `t4s_setup()` sets traps on `HUP`, `INT`, `TERM`, and `EXIT`
+  * Testcases must not write to or close file descriptor 9 as it is
+    used to communicate a bailout message (see `t4s_bailout()`).
 
 ## TODO
 
