@@ -1,6 +1,8 @@
 (unreleased)
   * run subtests in a subshell to prevent them from interfering with
     the test environment
+  * use file descriptor 9 for bailout message communication to reduce
+    the chance of conflict with testcases
 
 v1.2, released 2015-06-14
   * add t4s_give() for marking a prerequisite as satisfied
